<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:padding="16dp"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <EditText android:id="@+id/etName" android:hint="@string/name"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <EditText android:id="@+id/etPrice" android:hint="@string/price"
        android:inputType="numberDecimal"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <EditText android:id="@+id/etSize" android:hint="@string/size"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <Button android:id="@+id/btnPickImage" android:text="@string/pick_image"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <Button android:id="@+id/btnSave" android:text="@string/save"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>
</LinearLayout>
</ScrollView>
