<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/tvWelcome" android:text="@string/welcome_message"
        android:textSize="20sp" android:textStyle="bold"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <Button android:id="@+id/btnLogin" android:text="@string/login"
        android:layout_width="match_parent" android:layout_height="wrap_content" />
    <Button android:id="@+id/btnRegister" android:text="@string/register"
        android:layout_width="match_parent" android:layout_height="wrap_content" />
</LinearLayout>
